created github workflow

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "lcov:generate": "kahlan --coverage=4 --lcov=coverage.info",
         "lcov:html": "genhtml --output-directory lcov/public/ coverage.info",
         "lcov:open": "open lcov/public/index.html",
-        "test-ci": "kahlan --coverage --clover=coverage.xml",
+        "test-ci": "kahlan --coverage --lcov=coverage.info",
         "check": [
             "@cs-check",
             "@md-check"
