--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -17,6 +17,10 @@ markupsafe==2.1.3
 mergedeep==1.3.4
     # via mkdocs
 mkdocs==1.4.3
+    # via
+    #   -r docs/requirements.in
+    #   mkdocs-bootswatch
+mkdocs-bootswatch==1.1
     # via -r docs/requirements.in
 packaging==23.1
     # via mkdocs
