--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,7 @@
 site_name: WPRestClient
 google_analytics: [ 'UA-273283893-1', 'wprestclient.readthedocs.io' ]
+repo_url: https://github.com/angelxmoreno/WPRestClient
+edit_uri: blob/main/docs
 theme:
   name: litera
   nav_style: light
