--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "cakephp/utility": "^4.4",
     "php": "^7.4",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^7.7"
+    "guzzlehttp/guzzle": "^7.7",
+    "cakephp/collection": "^4.4"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7",
